
<resources>
    <string name="app_name">projet_integrateur</string>
    <string name="footer">Clinique VITALIS\n2424 rue de l’ETS, Montréal, 1A1 1A1\n(514) 123-VITA(8482)</string>
    <string name="connexion">Connexion</string>
    <string name="adresse_e_mail">Adresse e-mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="premi_re_fois_inscrivez_vous">Première fois ? Inscrivez-vous</string>
    <string name="inscription">Inscription</string>
    <string name="cr_ez_votre_compte">Créez votre compte</string>
    <string name="vous_avez_d_j_un_compte">Vous avez déjà un compte?</string>
    <string name="modifier_mon_mot_de_passe">Modifier mon mot de passe</string>
    <string name="mot_de_passe_actuel">Mot de passe actuel :</string>
    <string name="prendre_un_rendez_vous">Prendre un rendez-vous</string>
    <string name="mes_rendez_vous_venir">Mes rendez-vous à venir</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="mon_profil">Mon profil</string>
    <string name="pr_nom">Prénom :</string>
    <string name="nom">Nom :</string>
    <string name="num_ro_d_assurance_maladie">Numéro d\'assurance-maladie :</string>
    <string name="date_de_naissance">Date de naissance :</string>
    <string name="num_ro_civique">Numéro civique :</string>
    <string name="rue">Rue :</string>
    <string name="ville">Ville :</string>
    <string name="code_postal">Code postal :</string>
    <string name="e_mail">Adresse e-mail :</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone :</string>
    <string name="modifiez_vos_informations">Modifiez vos informations</string>
    <string name="changez_votre_mot_de_passe">Changez votre mot de passe</string>
    <string name="appliquer_le_changement">Appliquer le changement</string>
    <string name="appliquer_les_changements">Appliquer les changements</string>
    <string name="modifier_mon_profil">Modifier mon profil</string>
    <string name="confirmer_l_adresse_e_mail">Confirmer l\'adresse e-mail :</string>
    <string name="modifier">Pour modifier votre prénom, votre nom, votre numéro d’assurance maladie ou votre date de naissance, veuillez nous contacter ou se présenter à la clinique.</string>
    <string name="entrez_votre_adresse">Entrez votre adresse</string>
    <string name="mdp">Mot de passe</string>
    <string name="confirmez_votre_mot_de_passe">Confirmez votre mot de passe</string>
    <string name="_1_consultation_g_n_rale">1. Consultation générale</string>
    <string name="valuation_de_sant_pour_tout_probl_me">Évaluation de santé pour tout problème</string>
    <string name="service">Service</string>
    <string name="prendre_rdv">Prendre RDV</string>
    <string name="_2_suivi_de_grossesse">2. Suivi de grossesse</string>
    <string name="suivi_m_dical_de_grossesse">Suivi médical de grossesse</string>
    <string name="_3_suivi_de_maladies_chroniques">3. Suivi de maladies chroniques</string>
    <string name="contr_le_r_gulier_diab_te_hypertension_etc">Contrôle régulier (diabète, hypertension, etc.)</string>
    <string name="_4_d_pistage_itss">4. Dépistage ITSS</string>
    <string name="test_pour_infections_transmissibles_sexuellement_et_par_le_sang">Test pour infections transmissibles sexuellement et par le sang</string>
    <string name="blessures_l_g_res_infections_douleurs_mod_r_es_etc">Blessures légères, infections, douleurs modérées, etc.</string>
    <string name="_7_urgence_mineure">7. Urgence mineure</string>
    <string name="prise_de_sang_et_ou_test_urinaire">Prise de sang et/ou test urinaire</string>
    <string name="_6_pr_l_vement_sanguin_test_d_urine">6. Prélèvement sanguin / test d\'urine</string>
    <string name="prendre_un_rrd">Prendre un rendez-vous</string>
    <string name="prendre_un_rdv">Prendre un rendez-vous</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe :</string>
    <string name="confirmer_le_nouveau_mot_de_passe">Confirmer le nouveau mot de passe :</string>
    <string name="mes_prochains_rendez_vous">Mes prochains rendez-vous</string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="mot_de_passe_oubli_modifier_le_mot_de_passe">Mot de passe oublié ? Modifier le mot de passe</string>
    <string name="nom_du_service">Nom du service</string>
    <string name="date_du_service">date du service</string>
    <string name="date_du_rdv">date_du rdv</string>
    <string name="heure_du_rdv">heure du rdv</string>
    <string name="nom_du_docteur">Nom du Docteur</string>
    <string name="date_du_rdv2">Date du rdv</string>
    <string name="adresse_courriel_du_client">adresse courriel du client</string>
    <string name="prendre_rdv2">Prendre Rdv</string>
    <string name="prendre_rdv6">Prendre RDV</string>
    <string name="service5">Service</string>
    <string name="date_rdv">Date RDV</string>
    <string name="heure_rdv">Heure RDV</string>
    <string name="_5_vaccination">5. Vaccination</string>
    <string name="todo">TODO</string>
    <string name="vaccin_de_routine_voyage_ou_saisonnier">Vaccin de routine, voyage ou saisonnier</string>
    <string name="aucune_disponibilit_pour_l_instant_r_essayez_une_prochaine_fois">Aucune disponibilité pour l\'instant, réessayez une prochaine fois.</string>
    <string name="retour">Retour</string>
    <string name="todo5">TODO</string>
    <string name="confirmer_votre_choix_de_rendez_vous">Confirmer votre choix de rendez-vous</string>
    <string name="annuler">Annuler</string>
    <string name="service3">Service</string>
    <string name="heure_du_rdv4">Heure du rdv</string>
    <string name="annuler_le_rdv">Annuler le rdv</string>
    <string name="aucun_rendez_vous_pour_le_patient">Aucun rendez-vous pour le patient</string>
    <string name="retour4">Retour</string>
    <string name="nom_de_l_employe">Nom de l\'employe</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation2">Confirmation</string>
    <string name="retour5">Retour</string>
    <string name="retour6">Retour</string>
    <string name="retour7">Retour</string>
    <string name="nom2">Nom</string>
    <string name="pr_nom2">Prénom</string>
</resources>