<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <!--Header-->
    <View
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#0077CB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!--Logo-->
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/vitalis" />

        <!--Inscription-->
        <TextView
            android:id="@+id/inscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/inscription"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!--Formulaire d'inscription-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="1101dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <EditText
                android:id="@+id/inscription_prenom"
                style="@style/ChampFormulaire"
                android:layout_height="48dp"
                android:hint="@string/pr_nom" />

            <EditText
                android:id="@+id/inscription_nom"
                style="@style/ChampFormulaire"
                android:layout_height="48dp"
                android:hint="@string/nom" />

            <EditText
                android:id="@+id/inscription_nam"
                style="@style/ChampFormulaire"
                android:layout_height="48dp"
                android:hint="@string/num_ro_d_assurance_maladie" />

            <EditText
                android:id="@+id/inscription_naissance"
                style="@style/ChampFormulaire"
                android:layout_height="48dp"
                android:hint="@string/date_de_naissance" />

            <EditText
                android:id="@+id/inscription_adresse_autocomplete"
                style="@style/ChampFormulaire"
                android:layout_height="48dp"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/entrez_votre_adresse" />

            <!-- Suite des champs d’adresse -->
            <EditText
                android:id="@+id/inscription_civique"
                style="@style/ChampFormulaire"
                android:layout_height="48dp"
                android:hint="@string/num_ro_civique" />

            <EditText
                android:id="@+id/inscription_rue"
                style="@style/ChampFormulaire"
                android:layout_height="48dp"
                android:hint="@string/rue" />

            <EditText
                android:id="@+id/inscription_ville"
                style="@style/ChampFormulaire"
                android:layout_height="48dp"
                android:hint="@string/ville" />

            <EditText
                android:id="@+id/inscription_postal"
                style="@style/ChampFormulaire"
                android:layout_height="48dp"
                android:hint="@string/code_postal" />

            <EditText
                android:id="@+id/inscription_tel"
                style="@style/ChampFormulaire"
                android:layout_height="48dp"
                android:hint="@string/num_ro_de_t_l_phone" />

            <EditText
                android:id="@+id/inscription_email"
                style="@style/ChampFormulaire"
                android:layout_height="48dp"
                android:hint="@string/e_mail" />

            <EditText
                android:id="@+id/inscription_email_confirmation"
                style="@style/ChampFormulaire"
                android:layout_height="48dp"
                android:hint="Confirmez votre adresse e-mail" />

            <EditText
                android:id="@+id/inscription_mdp"
                style="@style/ChampFormulaire"
                android:layout_height="48dp"
                android:hint="@string/mdp"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/inscription_mdp_confirmation"
                style="@style/ChampFormulaire"
                android:layout_height="48dp"
                android:hint="@string/confirmez_votre_mot_de_passe"
                android:inputType="textPassword" />

            <!--Bouton créer votre compte-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_creer_compte"
                android:layout_width="230dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_rounded"
                android:text="@string/cr_ez_votre_compte"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <!--Lien connexion-->
            <TextView
                android:id="@+id/lien_connexion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/vous_avez_d_j_un_compte"
                android:textColor="#0076D7" />
            <!--Footer-->
            <TextView
                android:id="@+id/footer_inscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/footer"
                android:textColor="#000000"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
