<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rdvContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nomService2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service3"
            android:textSize="18sp"
            android:textColor="#000000"
            android:paddingBottom="8dp" />


        <TextView
            android:id="@+id/dateRdv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_du_rdv"
            android:textSize="16sp"
            android:textColor="#333333"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/heureRdv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heure_du_rdv4"
            android:textSize="16sp"
            android:textColor="#333333" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonAnnulerRdv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:backgroundTint="#0077CB"
        android:padding="8dp"
        android:text="@string/annuler_le_rdv"
        android:textColor="#FFFFFF" />
</LinearLayout>
