<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <!--Header-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="#0077CB"
        android:padding="12dp"
        android:gravity="center_vertical">

        <!--Lien prise de rdv-->
        <TextView
            android:id="@+id/lien_rdv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prendre_un_rendez_vous"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:gravity="start" />

        <!--Lien mes rdv-->
        <TextView
            android:id="@+id/lien_mes_rdv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mes_rendez_vous_venir"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:gravity="center" />

        <!--Lien déconnexion-->
        <TextView
            android:id="@+id/lien_deconnexion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/d_connexion"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:gravity="end" />
    </LinearLayout>


    <!--Afficher logo et Mon profil-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/vitalis"
            android:layout_gravity="start|center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon_profil"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_gravity="center" />
    </LinearLayout>


    <!--Liste informations personnelles-->

    <!--Footer-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="#F0F0F0"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/TitreChampProfil"
                android:text="Prenom" />

            <EditText
                android:id="@+id/profil_prenom"
                style="@style/ChampProfilLectureSeule" />

            <TextView
                style="@style/TitreChampProfil"
                android:text="Nom" />

            <EditText
                android:id="@+id/profil_nom"
                style="@style/ChampProfilLectureSeule" />

            <TextView
                style="@style/TitreChampProfil"
                android:text="Numero d'assurance maladie" />

            <EditText
                android:id="@+id/profil_nam"
                style="@style/ChampProfilLectureSeule" />

            <TextView
                style="@style/TitreChampProfil"
                android:text="Date de naissance" />

            <EditText
                android:id="@+id/profil_naissance"
                style="@style/ChampProfilLectureSeule" />

            <TextView
                style="@style/TitreChampProfil"
                android:text="Numero civique" />

            <EditText
                android:id="@+id/profil_civique"
                style="@style/ChampProfilLectureSeule" />

            <TextView
                style="@style/TitreChampProfil"
                android:text="Rue" />

            <EditText
                android:id="@+id/profil_rue"
                style="@style/ChampProfilLectureSeule" />

            <TextView
                style="@style/TitreChampProfil"
                android:text="Ville" />

            <EditText
                android:id="@+id/profil_ville"
                style="@style/ChampProfilLectureSeule" />

            <TextView
                style="@style/TitreChampProfil"
                android:text="@string/code_postal" />

            <EditText
                android:id="@+id/profil_postal"
                style="@style/ChampProfilLectureSeule" />

            <TextView
                style="@style/TitreChampProfil"
                android:text="@string/e_mail" />

            <EditText
                android:id="@+id/profil_email"
                style="@style/ChampProfilLectureSeule" />

            <TextView
                style="@style/TitreChampProfil"
                android:text="@string/num_ro_de_t_l_phone" />

            <EditText
                android:id="@+id/profil_tel"
                style="@style/ChampProfilLectureSeule" />

            <!--Lien modifier les informations personnelles-->
            <TextView
                android:id="@+id/lien_modifier_infos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/modifiez_vos_informations"
                android:textColor="#0076D7" />

            <!--Lien modifier le mdp-->
            <TextView
                android:id="@+id/lien_modifier_mdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                android:text="@string/changez_votre_mot_de_passe"
                android:textColor="#0076D7" />
        </LinearLayout>
    </ScrollView>

    <TextView
    android:id="@+id/footer_profil"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="20dp"
    android:text="@string/footer"
    android:textColor="#000000"
    android:textSize="12sp" />
</LinearLayout>
